[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/NPCs/yellow_alien/omoro_alien_02.png" type="Texture" id=1]
[ext_resource path="res://Scenes/NPCs/Omori.gd" type="Script" id=2]
[ext_resource path="res://Assets/NPCs/yellow_alien/omoro_alien_01.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Particles/SplatterComponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Particles/ParticleSceneRed.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Tools/DashPowerUp.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 145.5, 128.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 209.5, 139 )

[node name="Omori" type="KinematicBody2D" groups=["NPC"]]
collision_layer = 8
collision_mask = 150
script = ExtResource( 2 )

[node name="DashPowerUp" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 6, -6 )
scale = Vector2( 4.5, 3 )

[node name="SplatterComponent" parent="." instance=ExtResource( 4 )]
particle_scene = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
frame = 1
playing = true

[node name="KinematicCollision" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 18.5 )
shape = SubResource( 3 )

[node name="CollisionArea" type="Area2D" parent="."]
position = Vector2( -3, -8 )
collision_layer = 8
collision_mask = 281

[node name="Collision" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( 3.5, 12 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[node name="ReenableTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="splatta" from="." to="SplatterComponent" method="_on_Omori_splatta"]
[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
[connection signal="timeout" from="ReenableTimer" to="." method="_on_ReenableTimer_timeout"]
